# ReasonLoop

./: .gitignore  AGENT_START_HERE.xml  ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  IMPLEMENTATION_GUIDE_Fashion_Campaign.md  PRP_Fashion_Email_Campaign.md  README.md  WEBSITE_INTELLIGENCE_GUIDE.md  abilities.py  agent.yaml  agent_loader.py  app.py  create_admin_tables.sql  example_multi_agent.py  main.py  main_metrics.py  parallel-test-agent.yaml  pyproject.toml  requirements copy.txt  requirements.txt  run_api.py  segmentation_agent_clean.py  segmentation_final.py  segmentation_final_working.py  segmentation_working.py  simple_segmentation.py  switch_provider.py  test_clean_segmentation.py  test_email_design.py  test_final_segmentation.py  test_production_segmentation.py  test_segmentation.py  test_segmentation_fixed.py  test_segmentation_manual.py  test_simple_segmentation.py  test_website_intelligence.py  travel-agent.yaml
.githooks/: pre-commit
abilities/: __init__.py  ability_registry.py  email_design_agent.py  file_abilities.py  mysql_abilities.py  mysql_query.py  mysql_schema.py  segmentation_agent.py  text_completion.py  web_scrape.py  web_search.py  website_intelligence.py
api/: main.py
config/: logging_config.py  settings.json.example  settings.py
core/: execution_loop.py  task_manager.py
database/: schema_website_intelligence.sql  schema_website_intelligence_simple.sql
doc/: How-create-agents.md  What-agents-are.md
metrics/: session_1742395527_20250319_214527.json  session_1742398296_20250319_223207.json
models/: result.py  task.py
(+30 files in other folders)
