[project]
name = "reasonloop"
version = "0.1.0"
description = ""
authors = [
    {name = "Tanguy SALMON",email = "tanguy.salmon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "xai-sdk (>=1.3.1,<2.0.0)",
    "openai (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
